frontend/k8s/base/litter.yaml
apiVersion: v1
kind: Service
metadata: 
  labels:
    service.name: litter
  name: litter
spec:
  ports:
    - name: "litter-port" 
      port: 8888 # Needs to match ingress
      targetPort: litter-http # port is declared at the end of deployment
  selector:
    deployment.name: litter
status:
  loadBalancer: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: litter
spec:
  replicas: 1 # Should update to 3 later to make sure that session management works
  selector:
    matchLabels:
      deployment.name: litter
  template:
    metadata:
      labels:
        deployment.name: litter
    spec:
      containers:
      - name: litter
        image: frontend
        ports:
          - containerPort: 3000 # TODO - Is this needed?
            name: litter-http
      imagePullSecrets:
      - name: regcred
