frontend/k8s/base/ingress.production.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ingress-system
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - path: /staging/static/(.*)
            pathType: Prefix
            backend:
              service:
                name: litter-staging
                port:
                  number: 8888
          - path: /static/(.*)    # Handle production static files
            pathType: Prefix
            backend:
              service:
                name: litter-production
                port:
                  number: 8888
          - path: /staging(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: litter-staging
                port:
                  number: 8888
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: litter-production
                port:
                  number: 8888
